<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="700dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_login"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signinEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/signinPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_passw"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="OnLogin"
            android:text="@string/btn_login"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textForgotPassw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:onClick="OnForgotPassword"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="SignInGoogle"
            android:text="@string/btn_sign_with_google"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textGoToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnRegister"
            android:text="@string/text_to_register"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>