<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFirestoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleUserFirestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/userfirestore"/>

        <EditText
            android:id="@+id/editNameSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:ems="10"
            android:hint="@string/hint_enter_name"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/editEmailSP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:ems="10"
            android:hint="@string/hint_enter_email"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSaveFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:onClick="onSaveClickFB"
                android:text="@string/save_firestore" />

            <Button
                android:id="@+id/buttonDeleteFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:onClick="onDeleteClickFB"
                android:text="@string/delete_firestore" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>