<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/text_information" />

        <EditText
            android:id="@+id/editNameAU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:ems="10"
            android:hint="@string/hint_enter_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editEmailAU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:ems="10"
            android:hint="@string/hint_enter_email"
            android:inputType="textWebEmailAddress" />

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="52dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:contentDescription="btn 1"
                android:onClick="onSaveClick"
                android:text="@string/text_save" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:contentDescription="btn 2"
                android:onClick="onDeleteClick"
                android:text="@string/text_delete" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="396dp"
            android:layout_height="202dp"
            android:layout_marginBottom="76dp"
            android:text="Users"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>